<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:background="#f5f5dc"
android:weightSum="6.1"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ForgetPasswordActivity"
android:padding="20sp">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:src="@drawable/logotr"
    android:layout_weight="2.5"
    android:contentDescription="@string/logo" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:text="@string/forget_pass"
    android:layout_weight="1"
    android:textAlignment="center"
    android:textColor="#000000"
    android:textSize="30sp"
    android:textStyle="bold"
    android:gravity="center_horizontal" />

<EditText
    android:id="@+id/for_email"
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:layout_weight="0.7"
    android:paddingStart="12sp"
    android:paddingEnd="12sp"
    android:autofillHints="Email"
    android:drawableStart="@drawable/custom_email_icon"
    android:background="@drawable/custom_input"
    android:drawableLeft="@drawable/ic_email"
    android:drawablePadding="12sp"
    android:ems="10"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:textSize="14sp"
    android:paddingLeft="12sp" />


<Button
    android:id="@+id/btn_forget"
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:layout_marginTop="40sp"
    android:layout_weight="0.7"
    android:textColor="@color/white"
    android:background="@drawable/custom_button"
    android:textStyle="bold"
    android:textSize="15sp"
    android:text="@string/send_mail"/>

<Button
    android:id="@+id/btn_for_to_reg"
    android:layout_width="match_parent"
    android:layout_height="0sp"
    android:layout_weight="0.6"
    android:textAllCaps="false"
    android:textSize="15sp"
    android:textStyle="bold"
    android:layout_marginTop="10sp"
    android:textColor="@color/black"
    android:background="@android:color/transparent"
    android:text="@string/reg_desp"/>

    <Button
        android:id="@+id/btn_for_to_log"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.6"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:text="@string/log_despriction"/>
</LinearLayout>