<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        app:cardCornerRadius="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120sp"
                android:layout_height="90sp"
                android:padding="4sp"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/name"
                android:textSize="20sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:layout_toEndOf="@id/imageView"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/textViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_below="@id/textViewTitle"
                android:layout_toRightOf="@id/imageView"
                android:text="@string/name"
                android:textSize="12sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:layout_toEndOf="@id/imageView" />

            <TextView
                android:id="@+id/textViewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewSubTitle"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_toEndOf="@id/imageView"
                android:layout_toRightOf="@id/imageView"
                android:background="@drawable/custom_rating"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/_4_7"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>