<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="4"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#f5f5dc"
    android:padding="10sp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="#000000"
        android:background="@color/primaryColorOfApp"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="DashBoard"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:weightSum="2"
        android:padding="10sp"
        android:layout_weight="1">
        <ImageView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/logotr"
            tools:ignore="NestedWeights"
            android:contentDescription="@string/logo" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.7"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColorOfApp"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginLeft="10sp"
                android:layout_weight="1.3"
                android:text="@string/sub_title"
                android:textSize="16sp"
                android:textColor="@color/black"
                tools:ignore="NestedWeights"
                android:layout_marginStart="10sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:weightSum="2"
        android:layout_weight="1">
        <androidx.cardview.widget.CardView
            android:id="@+id/hotel"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/hotel_logo"
                    android:contentDescription="@string/hotels" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/hotels"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cafe"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/cafe_logo"
                    android:contentDescription="@string/cafe" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/cafe"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:weightSum="2"
        android:layout_weight="1">
        <androidx.cardview.widget.CardView
            android:id="@+id/rest"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/restaurant_logo"
                    android:contentDescription="@string/restaurants" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/restaurants"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/shop"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/shop_logo"
                    android:contentDescription="@string/shops" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/shops"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:weightSum="2"
        android:layout_weight="1">
        <androidx.cardview.widget.CardView
            android:id="@+id/attraction"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/attraction_logo"
                    android:contentDescription="@string/attractions" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/attractions"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fun"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10sp"
            app:cardCornerRadius="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="1.6"
                    android:padding="10sp"
                    android:src="@drawable/entertainment_logo"
                    android:contentDescription="@string/fun" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.4"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:text="@string/fun"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>